# esp32-example

./: CMakeLists.txt  partitions.csv  sdkconfig.old
main/: CMakeLists.txt  main.c
main/clients/: mqtt_client_handler.c  mqtt_client_handler.h
main/components/blink/: blink.c  blink.h
main/components/button_boot/: button_boot.c  button_boot.h
main/components/sensors/: sensors.c  sensors.h
main/connection/: wifi.c  wifi.h
main/handler/: goodbye_handler.c  goodbye_handler.h  hello_handler.c
main/server/: http_server.c  http_server.h  router.c  router.h
main/server/handler/: hello_handler.h  helper.c  helper.h  home_handler.c  home_handler.h  index_handler.c  ota_handler.c  ota_handler.h  save_config_wifi_handler.c  save_config_wifi_handler.h
main/shared/: state_manager.c  state_manager.h
main/tasks/: ota.c  ota.h
