idf_component_register(SRCS "main.c"
                    "connection/wifi.c"
                    "server/http_server.c"
                    "server/router.c"
                    "handler/hello_handler.c"
                    "handler/goodbye_handler.c"
                    "components/blink/blink.c"
                    "components/sensors/sensors.c"
                    "clients/mqtt_client_handler.c"
                    INCLUDE_DIRS "."
                    "connection"
                    "server"
                    "handler"
                    "components/blink"
                    "components/sensors"
                    "clients")
