idf_component_register(SRCS "main.c"
                    "connection/wifi.c"
                    "server/http_server.c"
                    "server/router.c"
                    "server/handler/helper.c"
                    "server/handler/home_handler.c"
                    "server/handler/ota_handler.c"
                    "server/handler/save_config_wifi_handler.c"
                    "components/blink/blink.c"
                    "components/sensors/sensors.c"
                    "components/button_boot/button_boot.c"
                    "clients/mqtt_client_handler.c"
                    "shared/state_manager.c"
                    "tasks/ota.c"
                    INCLUDE_DIRS "."
                    "connection"
                    "server"
                    "server/handler"
                    "components/blink"
                    "components/sensors"
                    "components/button_boot"
                    "clients"
                    "shared"
                    "tasks")
